# PPTist

./: .gitignore  package-lock.json  vite.config.ts
aippt_backend/: .env.example  main.py  mcp_starter.py  ppt.py  pyproject.toml  requirements.txt
ppt_files/: ppt_2c1df628-508e-41e8-98cf-abbf9f10fac0.json  ppt_c1096661-f78b-4454-a575-7ef77a79fd19.json  ppt_db7143aa-8157-4159-ae1f-62d2b35e2cd0.json
public/data/: template_2.json  template_3.json  template_4.json  template_5.json  template_6.json  template_7.json
public/mocks/: aippt_.json  aippt_5.json  aippt_6.json  aippt_7.json  demand.json  outline.json  slides.json  slides_.json
src/: App.vue
src/components/: Modal.vue
src/hooks/: useAIPPT.ts
src/services/: index.ts
src/store/: main.ts  slides.ts
src/types/: AIPPT.ts
src/views/Editor/: AIPPTDialog.vue
